5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1573_1326.log
== TEST (2019-03-11 15:04:47) 
-- CODE:
print(R$75)
-- ERROR:
File "XXXX", line 1
    print(R$75)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:05:30) 
-- CODE:
print("R$75")
-- OUTPUT:
R$75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:05:33) 
-- CODE:
print("R$75")
-- EXECUTION TIME:
0.134983
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:05:45) 
-- CODE:
printR$75
-- EXECUTION TIME:
0.201743
-- ERROR:
  File "/home/codebench/codes/1573/1326/main.py", line 1
    printR$75
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:05:50) 
-- CODE:
print R$75
-- ERROR:
File "XXXX", line 1
    print R$75
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(R$75)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:05:55) 
-- CODE:
print R$75
-- EXECUTION TIME:
0.165725
-- ERROR:
  File "/home/codebench/codes/1573/1326/main.py", line 1
    print R$75
          ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:06:05) 
-- CODE:
print (R$75)
-- EXECUTION TIME:
0.236156
-- ERROR:
  File "/home/codebench/codes/1573/1326/main.py", line 1
    print (R$75)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:06:06) 
-- CODE:
print (R$75)
-- ERROR:
File "XXXX", line 1
    print (R$75)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:06:39) 
-- CODE:
print ("R$75")
-- EXECUTION TIME:
0.181256
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:06:40) 
-- CODE:
print ("R$75")
-- EXECUTION TIME:
0.120038
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:06:41) 
-- CODE:
print ("R$75")
-- EXECUTION TIME:
0.135926
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:06:54) 
-- CODE:
print("R$75")
-- OUTPUT:
R$75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:06:56) 
-- CODE:
print("R$75")
-- EXECUTION TIME:
0.135135
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:06:58) 
-- CODE:
print("R$75")
-- OUTPUT:
R$75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:07:19) 
-- CODE:
print("R$40+35")
-- OUTPUT:
R$40+35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:07:22) 
-- CODE:
print("R$40+35")
-- EXECUTION TIME:
0.15519
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$40+35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:07:48) 
-- CODE:
print("R$40+R$35=R$75")
-- OUTPUT:
R$40+R$35=R$75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:07:51) 
-- CODE:
print("R$40+R$35=R$75")
-- EXECUTION TIME:
0.184103
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$40+R$35=R$75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:07:52) 
-- CODE:
print("R$40+R$35=R$75")
-- OUTPUT:
R$40+R$35=R$75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:07:55) 
-- CODE:
print("R$40+R$35=R$75")
-- EXECUTION TIME:
0.133243
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$40+R$35=R$75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:08:08) 
-- CODE:
print(R$40+R$35=R$75)
-- ERROR:
File "XXXX", line 1
    print(R$40+R$35=R$75)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:08:13) 
-- CODE:
print(R$40+R$35=R$75)
-- EXECUTION TIME:
0.200346
-- ERROR:
  File "/home/codebench/codes/1573/1326/main.py", line 1
    print(R$40+R$35=R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:08:50) 
-- CODE:
print(R$40+R$35=)
-- ERROR:
File "XXXX", line 1
    print(R$40+R$35=)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:08:56) 
-- CODE:
print(R$40+R$35=)
-- EXECUTION TIME:
0.103343
-- ERROR:
  File "/home/codebench/codes/1573/1326/main.py", line 1
    print(R$40+R$35=)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:08:58) 
-- CODE:
print(R$40+R$35=)
-- ERROR:
File "XXXX", line 1
    print(R$40+R$35=)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:09:19) 
-- CODE:
print($40+$35=)
-- ERROR:
File "XXXX", line 1
    print($40+$35=)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:09:21) 
-- CODE:
print($40+$35=)
-- EXECUTION TIME:
0.121112
-- ERROR:
  File "/home/codebench/codes/1573/1326/main.py", line 1
    print($40+$35=)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:09:24) 
-- CODE:
print($40+$35)
-- ERROR:
File "XXXX", line 1
    print($40+$35)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:11:02) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:11:05) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.130869
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:27:02) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:27:04) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.125709
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
